# portfolio

./: .gitignore  Makefile  pyproject.toml
portfolio/streamlit_app/: streamlit_app.py
portfolio/streamlit_app/app_pages/: about.py  home.py  snake.py
portfolio/streamlit_app/app_pages/snake/: default_user_prompt.txt  snake.md  snake_page.py
portfolio/streamlit_app/components/: sidebar.py
portfolio/streamlit_app/snake_ai/: game.py  main_prompt.md  snake_config.py  snake_direction.py  snake_game.py  snake_renderer.py
portfolio/streamlit_app/snake_ai/llm/: llm_code_generator.py  main_prompt.md
