[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Philippe Paulos <philippe.paulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ruff = "0.7.4"
streamlit = "1.40.1"
streamlit-extras = "*"

[tool.poetry.group.dev.dependencies]
setuptools = "^70.3.0"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
