[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Philippe Paulos <philippe.paulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "1.54.5"
opencv-python = "*"
ruff = "0.7.4"
streamlit = "1.40.1"
streamlit-extras = "*"

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.1"
setuptools = "^70.3.0"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
